[package]
name = "event_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = "^4"
uuid = { version = "1.2.1", features = ["v4"] }
serde = { version = "^1", features = ["derive"] }
env_logger = "0.9.1"
log = "^0.4"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }
derive_more = "^0.99"
jsonschema = "0.16.1"
serde_json = "1.0.87"
rdkafka = "0.29.0"
futures = "0.3.25"