[package]
name = "server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "prisma-cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4", default-features = false, features= ["postgresql"] }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
log = "^0.4"