[package]
name = "ad_state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4", default-features = false, features = [
    "postgresql",
] }
serde = { version = "1.0", features = ["derive"] }
filter = { path = "../filter" }
common = { path = "../common" }
ranker = { path = "../ranker" }
integrations = { path = "../integrations" }
serde_json = "1.0.93"
itertools = "0.10.5"
arc-swap = "1.6.0"
lazy_static = "1.4.0"
futures = "0.3.28"
async-trait = "0.1.68"
reqwest = "0.11.18"
