[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4", default-features = false, features = [
    "postgresql",
] }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
log = "^0.4"
dotenv = "0.15.0"
filter = { path = "../filter" }
common = { path = "../common" }
serde_json = "1.0.93"
itertools = "0.10.5"
actix-cors = "0.6.4"
env_logger = "0.10.0"
tokio = "1.26.0"
arc-swap = "1.6.0"
lazy_static = "1.4.0"
