[package]
name = "event"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
log = "^0.4"
dotenv = "0.15.0"
serde_json = "1.0.93"
actix-cors = "0.6.4"
env_logger = "0.10.0"
schema_registry_converter = { version = "3.1.0", features = ["easy", "avro", "blocking"] }
apache-avro = "0.14.0"
# common = { path = "../common" }
# prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4", default-features = false, features = [
#     "postgresql",
# ] }
arc-swap = "1.6.0"
rdkafka = { version = "0.29.0", features = ["cmake-build", "ssl-vendored"] }
rdkafka-sys = "4.3.0"