[package]
name = "integrations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4", default-features = false, features = [
    "postgresql",
] }
serde = { version = "1.0", features = ["derive"] }
common = { path = "../common" }
filter = { path = "../filter" }
async-trait = "0.1.68"
futures = "0.3.28"
serde_json = "1.0.96"
reqwest = { version = "0.11.18", features = ["json"] }
hmac = "0.12.1"
sha2 = "0.10.6"
rand = "0.8.5"
rand_distr = "0.4.3"
hex-literal = "0.4.1"
hex = "0.4.3"
