[package]
name = "ranker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4", default-features = false, features = [
    "postgresql",
] }
serde = { version = "1.0", features = ["derive"] }
filter = { path = "../filter" }
common = { path = "../common" }
serde_json = "1.0.93"
arc-swap = "1.6.0"
lazy_static = "1.4.0"
rand_distr = "0.4.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
